python/tests/gold/hostcrdcleartext/snapshots/snapshot.yaml
{
    "Consul": {},
    "Kubernetes": {
        "AuthService": null,
        "ConsulResolver": null,
        "Host": [
            {
                "apiVersion": "getambassador.io/v2",
                "kind": "Host",
                "metadata": {
                    "annotations": {
                        "kubectl.kubernetes.io/last-applied-configuration": "{\"apiVersion\":\"getambassador.io/v2\",\"kind\":\"Host\",\"metadata\":{\"annotations\":{},\"labels\":{\"kat-ambassador-id\":\"hostcrdcleartext\",\"scope\":\"AmbassadorTest\"},\"name\":\"cleartext-host\",\"namespace\":\"default\"},\"spec\":{\"acmeProvider\":{\"authority\":\"none\"},\"ambassador_id\":[\"hostcrdcleartext\"],\"hostname\":\"hostcrdcleartext\",\"requestPolicy\":{\"insecure\":{\"action\":\"Route\"}},\"selecto [...]
                    },
                    "clusterName": "",
                    "creationTimestamp": "2020-05-14T17:38:29Z",
                    "generation": 1,
                    "labels": {
                        "kat-ambassador-id": "hostcrdcleartext",
                        "scope": "AmbassadorTest"
                    },
                    "name": "cleartext-host",
                    "namespace": "default",
                    "resourceVersion": "64028",
                    "selfLink": "/apis/getambassador.io/v2/namespaces/default/hosts/cleartext-host",
                    "uid": "b989c031-9609-11ea-ae16-06e21b589211"
                },
                "spec": {
                    "acmeProvider": {
                        "authority": "none"
                    },
                    "ambassador_id": [
                        "hostcrdcleartext"
                    ],
                    "hostname": "hostcrdcleartext",
                    "requestPolicy": {
                        "insecure": {
                            "action": "Route"
                        }
                    },
                    "selector": {
                        "matchLabels": {
                            "hostname": "host-cleartext"
                        }
                    }
                }
            }
        ],
        "KubernetesEndpointResolver": null,
        "KubernetesServiceResolver": null,
        "LogService": null,
        "Mapping": [
            {
                "apiVersion": "getambassador.io/v2",
                "kind": "Mapping",
                "metadata": {
                    "annotations": {
                        "kubectl.kubernetes.io/last-applied-configuration": "{\"apiVersion\":\"getambassador.io/v2\",\"kind\":\"Mapping\",\"metadata\":{\"annotations\":{},\"labels\":{\"hostname\":\"host-cleartext\",\"kat-ambassador-id\":\"hostcrdcleartext\",\"scope\":\"AmbassadorTest\"},\"name\":\"cleartext-target-mapping\",\"namespace\":\"default\"},\"spec\":{\"ambassador_id\":[\"hostcrdcleartext\"],\"prefix\":\"/target/\",\"service\":\"hostcrdcleartext-http\"}}\n"
                    },
                    "clusterName": "",
                    "creationTimestamp": "2020-05-14T17:38:30Z",
                    "generation": 1,
                    "labels": {
                        "hostname": "host-cleartext",
                        "kat-ambassador-id": "hostcrdcleartext",
                        "scope": "AmbassadorTest"
                    },
                    "name": "cleartext-target-mapping",
                    "namespace": "default",
                    "resourceVersion": "64030",
                    "selfLink": "/apis/getambassador.io/v2/namespaces/default/mappings/cleartext-target-mapping",
                    "uid": "b9932612-9609-11ea-ae16-06e21b589211"
                },
                "spec": {
                    "ambassador_id": [
                        "hostcrdcleartext"
                    ],
                    "prefix": "/target/",
                    "service": "hostcrdcleartext-http"
                }
            }
        ],
        "Module": null,
        "RateLimitService": null,
        "TCPMapping": null,
        "TLSContext": null,
        "TracingService": null,
        "ingresses": null,
        "secret": null,
        "service": [
            {
                "apiVersion": "v1",
                "kind": "Service",
                "metadata": {
                    "annotations": {
                        "kubectl.kubernetes.io/last-applied-configuration": "{\"apiVersion\":\"v1\",\"kind\":\"Service\",\"metadata\":{\"annotations\":{},\"labels\":{\"app.kubernetes.io/component\":\"ambassador-service\",\"kat-ambassador-id\":\"hostcrdcleartext\",\"scope\":\"AmbassadorTest\"},\"name\":\"hostcrdcleartext\",\"namespace\":\"default\"},\"spec\":{\"ports\":[{\"name\":\"http\",\"port\":80,\"protocol\":\"TCP\",\"targetPort\":8080},{\"name\":\"https\",\"port\":443,\"protocol\":\"TCP\",\ [...]
                    },
                    "creationTimestamp": "2020-05-14T17:38:30Z",
                    "labels": {
                        "app.kubernetes.io/component": "ambassador-service",
                        "kat-ambassador-id": "hostcrdcleartext",
                        "scope": "AmbassadorTest"
                    },
                    "name": "hostcrdcleartext",
                    "namespace": "default",
                    "resourceVersion": "64040",
                    "selfLink": "/api/v1/namespaces/default/services/hostcrdcleartext",
                    "uid": "b9b9b34c-9609-11ea-ae16-06e21b589211"
                },
                "spec": {
                    "clusterIP": "10.109.231.171",
                    "externalTrafficPolicy": "Cluster",
                    "ports": [
                        {
                            "name": "http",
                            "nodePort": 31577,
                            "port": 80,
                            "protocol": "TCP",
                            "targetPort": 8080
                        },
                        {
                            "name": "https",
                            "nodePort": 32510,
                            "port": 443,
                            "protocol": "TCP",
                            "targetPort": 8443
                        }
                    ],
                    "selector": {
                        "service": "hostcrdcleartext"
                    },
                    "sessionAffinity": "None",
                    "type": "NodePort"
                },
                "status": {
                    "loadBalancer": {}
                }
            },
            {
                "apiVersion": "v1",
                "kind": "Service",
                "metadata": {
                    "annotations": {
                        "kubectl.kubernetes.io/last-applied-configuration": "{\"apiVersion\":\"v1\",\"kind\":\"Service\",\"metadata\":{\"annotations\":{},\"labels\":{\"kat-ambassador-id\":\"hostcrdcleartext\",\"scope\":\"AmbassadorTest\",\"service\":\"hostcrdcleartext-admin\"},\"name\":\"hostcrdcleartext-admin\",\"namespace\":\"default\"},\"spec\":{\"ports\":[{\"name\":\"hostcrdcleartext-admin\",\"port\":8877,\"targetPort\":8877}],\"selector\":{\"service\":\"hostcrdcleartext\"},\"type\":\"NodePo [...]
                    },
                    "creationTimestamp": "2020-05-14T17:38:30Z",
                    "labels": {
                        "kat-ambassador-id": "hostcrdcleartext",
                        "scope": "AmbassadorTest",
                        "service": "hostcrdcleartext-admin"
                    },
                    "name": "hostcrdcleartext-admin",
                    "namespace": "default",
                    "resourceVersion": "64044",
                    "selfLink": "/api/v1/namespaces/default/services/hostcrdcleartext-admin",
                    "uid": "b9c631bb-9609-11ea-ae16-06e21b589211"
                },
                "spec": {
                    "clusterIP": "10.100.165.101",
                    "externalTrafficPolicy": "Cluster",
                    "ports": [
                        {
                            "name": "hostcrdcleartext-admin",
                            "nodePort": 30436,
                            "port": 8877,
                            "protocol": "TCP",
                            "targetPort": 8877
                        }
                    ],
                    "selector": {
                        "service": "hostcrdcleartext"
                    },
                    "sessionAffinity": "None",
                    "type": "NodePort"
                },
                "status": {
                    "loadBalancer": {}
                }
            },
            {
                "apiVersion": "v1",
                "kind": "Service",
                "metadata": {
                    "annotations": {
                        "kubectl.kubernetes.io/last-applied-configuration": "{\"apiVersion\":\"v1\",\"kind\":\"Service\",\"metadata\":{\"annotations\":{},\"labels\":{\"kat-ambassador-id\":\"hostcrdcleartext\",\"scope\":\"AmbassadorTest\"},\"name\":\"hostcrdcleartext-http\",\"namespace\":\"default\"},\"spec\":{\"ports\":[{\"name\":\"http\",\"port\":80,\"protocol\":\"TCP\",\"targetPort\":8103},{\"name\":\"https\",\"port\":443,\"protocol\":\"TCP\",\"targetPort\":8466}],\"selector\":{\"backend\":\"s [...]
                    },
                    "creationTimestamp": "2020-05-14T17:38:30Z",
                    "labels": {
                        "kat-ambassador-id": "hostcrdcleartext",
                        "scope": "AmbassadorTest"
                    },
                    "name": "hostcrdcleartext-http",
                    "namespace": "default",
                    "resourceVersion": "64052",
                    "selfLink": "/api/v1/namespaces/default/services/hostcrdcleartext-http",
                    "uid": "b9db1f3e-9609-11ea-ae16-06e21b589211"
                },
                "spec": {
                    "clusterIP": "10.100.209.46",
                    "ports": [
                        {
                            "name": "http",
                            "port": 80,
                            "protocol": "TCP",
                            "targetPort": 8103
                        },
                        {
                            "name": "https",
                            "port": 443,
                            "protocol": "TCP",
                            "targetPort": 8466
                        }
                    ],
                    "selector": {
                        "backend": "superpod-default"
                    },
                    "sessionAffinity": "None",
                    "type": "ClusterIP"
                },
                "status": {
                    "loadBalancer": {}
                }
            }
        ]
    }
}
